<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/tech_03_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_nickname"
            android:textStyle="bold"/>
        <TextView
            android:gravity="center"
            android:id="@+id/nick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_cid"
            android:textStyle="bold"/>
        <TextView
            android:gravity="center"
            android:id="@+id/cid"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_sid"
            android:textStyle="bold"/>
        <TextView
            android:gravity="center"
            android:id="@+id/sid"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>